# model-to-market-the-quantitative-hack-2026

./: README.md  doubleword.md  information.md  mt5_crypto_trading_blueprint.md  pyproject.toml  rules.md
config/: symbol_map.json
data/: symbol_metadata.json
docs/: integrated_fx_crypto_momentum.md  northflank_24_7_deployment.md  run_bot_and_live_orders.md  run_live_trading.md  strategy_design_freeze.md  strategy_research.md
scripts/: backtest.py  bootstrap_symbols.py  demo_test_trade.py  export_feature_snapshots.py  print_risk_state.py  recommend_thresholds.py  run_analytics.py  run_bot_dry_run.py  run_bot_live.py  run_continuous_improvement.py  run_data_collector.py  run_strategy_once.py  verify_mt5_connection.py
src/: mt5_client.py
src/mt5_crypto_bot/: __init__.py  __main__.py  analytics.py  app.py  backtest.py  config.py  constants.py  continuous_improvement.py  data_collector.py  dry_run.py  execution.py  features.py  live.py  logging_setup.py  mt5_client.py  reporting.py  retune.py  risk.py  schemas.py  storage.py  strategy.py  symbols.py  thresholds.py
tests/: test_analytics.py  test_backtest.py  test_config_and_schemas.py  test_continuous_improvement.py  test_data_collector.py  test_dry_run.py  test_execution.py  test_features.py  test_live.py  test_mt5_client.py  test_package_import.py  test_risk.py  test_storage.py  test_strategy.py  test_symbol_discovery.py  test_thresholds.py
